<resources>
    <string name="app_name">Ryan Koech Bmi App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_addDetails_title">Enter Personal Details</string>
    <string name="input_hint_name">Name</string>
    <string name="fragment_addDetails_subtitle">Calculate Your Body Mass Index</string>
    <string name="fragment_title_addDetails">Add BMI Details</string>
    <string name="fragment_title_results">BMI Details</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_gender">Gender</string>
    <string name="text_calculate">Calculate</string>
    <string name="message_ponderal_index">Ponderal Index : %skg/m3</string>
    <string name="message_bmi_result_underweight">Hello %s, you are underweight</string>
    <string name="message_bmi_result_normal">Hello %s, you are normal</string>
    <string name="message_bmi_result_overweight">Hello %s, you are overweight</string>
    <string name="message_bmi_result_obese">Hello %s, you are obese</string>
    <string name="message_error">Something went wrong</string>
    <string name="message_permission_denied">Permission denied</string>
    <string name="message_save_success">Image Saved Successfully</string>
    <string name="message_input_error">Please enter your name</string>
    <string name="full_stop">.</string>
    <string name="text_rate">Rate</string>
    <string name="text_share">Share</string>
    <string name="ads_id_app_open">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ads_id_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ads_id_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="share_image_subject">BMI Screenshot</string>
    <string name="share_image_text">BMI App has calculated my BMI. Take a look.</string>
    <string name="share_image_intent_title">Share using</string>

</resources>